--- a/aula_site.html
+++ b/aula_site.html
@@ -8,21 +8,29 @@
     <title>aula_site</title>
 </head>
 <body>
+    <!--inicio do cabeçalho-->
     <div class="caixa">
         <div class="cabecalho">
-            <h3> <span id="palavra_projeto">Projeto</span> IoT Revolucionário</h3>
+            <h1> <span id="palavra_laranja">Projeto</span> IoT Revolucionário</h1>
             <nav>
                 <ul>
                     <li>Login</li>
                     <li>Contato</li>
                     <li>Sobre</li>
-                    <li id="palavra_home">Home</li>
+                    <li id="palavra_laranja">Home</li>
                 </ul>
             </nav>
         </div>
-
-
-
     </div>
+    <!--fim do cabeçalho-->
+    <div class="caixa">
+        <div class="faixa">
+            <h1>Receba nossas atualizações!</h1>
+            <button>Enviar</button>
+            <input type="text" id="inp_email" placeholder="Digite seu e-mail">
+            
+        </div>
+    </div>
+
 </body>
 </html>
