--- a/cadastro.html
+++ b/cadastro.html
@@ -40,7 +40,7 @@
             Login <br>
             <input class="input" type="text" placeholder="Seu nome de usuario"> <br><br>
             Senha <br>
-            <input class="input" type="text" placeholder="**********"> <br><br>
+            <input class="input" type="password" placeholder="**********"> <br><br>
             <button class="btn-green">Cadastrar</button>
            </div>
            <br>
