--- a/dash.html
+++ b/dash.html
@@ -58,7 +58,7 @@
     var myChart = new Chart(ctx, {
         type: 'doughnut',
         data: {
-            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+            labels: ['Liquid', 'Dignitas', 'Astralis', 'Mibr', 'Furia', 'Gambit'],
             datasets: [{
                 label: '# of Votes',
                 data: [35, 12, 7, 26, 18, 22],
